[package]
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
name = "github_webhook_data"
version = "0.0.1"
description = "GitHub webhook payload data types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Phrohdoh/github-webhook-data-rs"
include = ["src/**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/github_webhook_data/"

[dependencies]
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"

[workspace]
members = ["server", "send-webhook"]
