[package]
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
name = "github_webhook_data"
version = "0.0.2"
description = "GitHub webhook payload data types"
license = "MIT / Apache-2.0"
repository = "https://github.com/Phrohdoh/github-webhook-data-rs"
include = ["src/**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/github_webhook_data/"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[workspace]
members = ["server", "send-webhook"]
